--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ layout: default
                     {% comment %} if page.subtitle {% endcomment %}
                     <h2 class="subheading">{{ page.subtitle }}</h2>
                     {% comment %} endif {% endcomment %}
-                    <span class="meta">作者:{% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} · 发布时间:{{ page.date | date: "%Y-%m-%d" }}</span>
+                    <span class="meta">作者:{% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %}   发布时间:{{ page.date | date: "%Y年%m月%d日" }}</span>
                 </div>
             </div>
         </div>
