--- a/css/mp.css
+++ b/css/mp.css
@@ -87,7 +87,7 @@
 		height: 100%;
 		background-size: cover;
 		background-color: #ffffff;
-		background-image: url("mp_bg.jpg");
+		background-image: url("../img/mp_bg.jpg");
 		background-repeat: no-repeat;
 	}
 
