--- a/game/style/main.css
+++ b/game/style/main.css
@@ -314,33 +314,33 @@ hr {
     font-size: 0px; }
   .tile.tile-2 .tile-inner {
     background: #eee4da;
-    background: url(./fonts/2.JPG);
+    background: url(https://doupengs.github.io/game/style/fonts/2.jpg);
     background-size:100% 100%;
     box-shadow: 0 0 30px 10px rgba(238, 188, 11, 0), inset 0 0 0 1px rgba(238, 188, 11, 0); }
   .tile.tile-4 .tile-inner {
     background: #ede0c8;
-    background: url(./fonts/4.JPG);
+    background: url(https://doupengs.github.io/game/style/fonts/4.jpg);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0); }
   .tile.tile-8 .tile-inner {
     color: #f9f6f2;
     background: #f2b179; 
-    background: url(./fonts/8.JPG);}
+    background: url(https://doupengs.github.io/game/style/fonts/8.jpg);}
   .tile.tile-16 .tile-inner {
     color: #f9f6f2;
     background: #f59563; 
-    background: url(./fonts/16.JPG);}
+    background: url(https://doupengs.github.io/game/style/fonts/16.jpg);}
   .tile.tile-32 .tile-inner {
     color: #f9f6f2;
     background: #f67c5f;
-    background: url(./fonts/32.JPG);}
+    background: url(https://doupengs.github.io/game/style/fonts/32.jpg);}
   .tile.tile-64 .tile-inner {
     color: #f9f6f2;
     background: #f65e3b;
-    background: url(./fonts/64.JPG);}
+    background: url(https://doupengs.github.io/game/style/fonts/64.jpg);}
   .tile.tile-128 .tile-inner {
     color: #f9f6f2;
     background: #edcf72;
-    background: url(./fonts/128.JPG);
+    background: url(https://doupengs.github.io/game/style/fonts/128.jpg);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
     font-size: 0px; }
     @media screen and (max-width: 520px) {
@@ -349,7 +349,7 @@ hr {
   .tile.tile-256 .tile-inner {
     color: #f9f6f2;
     background: #edcc61;
-    background: url(./fonts/256.JPG);
+    background: url(https://doupengs.github.io/game/style/fonts/256.jpg);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
     font-size: 0px; }
     @media screen and (max-width: 520px) {
@@ -358,7 +358,7 @@ hr {
   .tile.tile-512 .tile-inner {
     color: #f9f6f2;
     background: #edc850;
-    background: url(./fonts/512.JPG);
+    background: url(https://doupengs.github.io/game/style/fonts/512.jpg);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
     font-size: 0px; }
     @media screen and (max-width: 520px) {
@@ -367,7 +367,7 @@ hr {
   .tile.tile-1024 .tile-inner {
     color: #f9f6f2;
     background: #edc53f;
-    background: url(./fonts/1024.JPG);
+    background: url(https://doupengs.github.io/game/style/fonts/1024.jpg);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
     font-size: 0px; }
     @media screen and (max-width: 520px) {
@@ -376,7 +376,7 @@ hr {
   .tile.tile-2048 .tile-inner {
     color: #f9f6f2;
     background: #edc22e;
-    background: url(./fonts/2048.JPG);
+    background: url(https://doupengs.github.io/game/style/fonts/2048.jpg);
     box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
     font-size: 0px; }
     @media screen and (max-width: 520px) {
