--- a/resume/index.css
+++ b/resume/index.css
@@ -22,7 +22,7 @@
 	overflow: hidden;
 	background: rgb(48, 48, 48);
 	border: 1px solid #ccc;
-	max-height: 94.5%;
+	/*max-height: 94.5%;*/
 	width: 49%;
 	font-size: 14px;
 	font-family: monospace;
